# django-coffee

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  runtests.py  setup.py
.github/workflows/: ci.yml
coffee_admin/: README.md  __init__.py  admin.py  apps.py  urls.py  views.py
coffee_admin/static/coffee_admin/css/: launcher.css
coffee_admin/static/coffee_admin/js/: coffee_admin.js
coffee_admin/templates/admin/: base_site.html
coffee_admin/templates/coffee_admin/: dashboard.html
docs/: CUSTOM_ADMIN_SITES.md
tests/: __init__.py  conftest.py  settings.py  test_app.py  test_views.py  urls.py
