[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-coffee-admin"
version = "1.0.0"
description = "A Django package for admin-only functionality without models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bram Esposito", email = "bram.esposito@gmail.com"}
]
keywords = ["django", "admin", "launcher", "spotlight", "alfred"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "black>=23.0",
    "isort>=5.12",
]

[project.urls]
Homepage = "https://github.com/BramEsposito/django-coffee"
Repository = "https://github.com/BramEsposito/django-coffee"
Issues = "https://github.com/BramEsposito/django-coffee/issues"

[tool.setuptools]
packages = ["coffee_admin"]
include-package-data = true

[tool.setuptools.package-data]
coffee_admin = [
    "templates/**/*",
    "static/**/*",
    "README.md",
]
